--- a/doomgeneric/Makefile.cykusz
+++ b/doomgeneric/Makefile.cykusz
@@ -14,8 +14,8 @@ endif
 
 CC=x86_64-cykusz-gcc  # gcc or g++
 CFLAGS+=-O3
-LDFLAGS+=$(CYKUSZ_ROOT)/usr/lib/Scrt1.o $(CYKUSZ_ROOT)/usr/lib/gcc/x86_64-cykusz/10.2.0/crti.o $(CYKUSZ_ROOT)/usr/lib/gcc/x86_64-cykusz/10.2.0/crtn.o
-CFLAGS+=-Wall -DNORMALUNIX -DSNDSERV -D_DEFAULT_SOURCE # -DUSEASM
+LDFLAGS+=$(CYKUSZ_ROOT)/usr/lib/crt0.o $(CYKUSZ_ROOT)/usr/lib/gcc/x86_64-cykusz/10.2.0/crti.o $(CYKUSZ_ROOT)/usr/lib/gcc/x86_64-cykusz/10.2.0/crtn.o
+CFLAGS+=-Wall -DNORMALUNIX -DLINUX -DSNDSERV -D_DEFAULT_SOURCE # -DUSEASM
 LIBS+=-lm -lc 
 
 # subdirectory for objects
